Added formula parser.

--- a/configparser/example_config.cfg
+++ b/configparser/example_config.cfg
@@ -35,6 +35,7 @@ controls:
 
 values:
     goFastAmount: {choose from 0.5, 1.0 using goFast}
+    testFormula: xAxis + yAxis * 4 - goFast.pressed / 2.0
 
 commands:
     blowUp is BlowUpCommand:
